# fk_mc

./: .travis.yml  CMakeLists.txt  Hamiltonian.ipynb  README.md  fk_mc.lmod.in
benchmark/: CMakeLists.txt  fast_update.cpp
cmake/: CommonDefs.cmake  FindArpack.cmake  FindFFTW.cmake  FindGFTools.cmake
eigen/: ArpackSupport  eigen_iterative_solver.hpp
examples/: Hamiltonian.ipynb  graph_lattice_test.ipynb
include/fk_mc/: Hamiltonian.ipynb  binning.hpp  common.hpp  configuration.hpp  definitions.hpp.in  fk_mc.hpp  fk_mc.hxx  jackknife.hpp  lattice.hpp  mc_metropolis.hpp  moves.hpp  moves_chebyshev.hpp  percent_output.hpp  triqs_extra.hpp
include/fk_mc/lattice/: graph.hpp  honeycomb.hpp  hypercubic.hpp
include/fk_mc/measures/: eigenfunctions.hpp  energy.hpp  focc_history.hpp  fsusc0pi.hpp  fsusc_fft.hpp  ipr.hpp  polarization.hpp  spectrum.hpp  spectrum_history.hpp  stiffness.hpp
misc/: arpack_install_macos_gfortran.sh
prog/: CMakeLists.txt  data_load.hpp  data_save.hpp  data_save.hxx  fk_mc_exec.cpp  fk_mc_kwant.cpp
scripts/misc/: clean_data.py
scripts/parse/: parse_ipr.py  parse_thermod.py  parse_uscan.py
scripts/run/: gen_data_uscan.py  mc_run.py
solver/: CMakeLists.txt  binning.hpp  chebyshev.hpp  common.hpp  configuration.cpp  configuration.hpp  data_load.cpp  data_save.cpp  data_save.hxx  data_saveload.hpp  definitions.hpp.in  fk_mc.cpp  fk_mc.hpp  fk_mc.hxx  jackknife.hpp  lattice.cpp  lattice.hpp  lattice_traits.cpp  lattice_traits.hpp  measure_d2energy.hpp  measure_energy.hpp  measure_spectrum.hpp  measure_spectrum_history.hpp  measures.hpp  moves.cpp  moves.hpp  moves_chebyshev.cpp  triqs_extra.hpp
solver/lattice/: chain.cpp  chain.hpp  honeycomb.cpp  hypercubic.cpp  hypercubic.hpp  polarized.hpp  triangular.cpp  triangular.hpp
solver/measures/: eigenfunctions.cpp  energy.cpp  energy.hpp  focc.hpp  focc_history.cpp  focc_history.hpp  fsusc.hpp  fsusc0pi.hpp  fsusc_fft.hpp  ipr.hpp  polarization.hpp  spectrum.cpp  spectrum.hpp  spectrum_history.cpp  spectrum_history.hpp  stiffness.hpp
src/: CMakeLists.txt  common.hpp  configuration.cpp  configuration.hpp  fk_mc.cpp  fk_mc.hpp  lattice.cpp  lattice_traits.hpp  mc_metropolis.cpp  measures.hpp  moves.cpp  moves.hpp  moves_chebyshev.cpp
src/lattice/: chain.cpp  graph.cpp  honeycomb.cpp  hypercubic.cpp  triangular.cpp
src/measures/: eigenfunctions.cpp  energy.cpp  focc_history.cpp  spectrum.cpp  spectrum_history.cpp
statistics/: binning.hpp
test/: CMakeLists.txt  binning_test.cpp  chain_test.cpp  config_test.cpp  eigen_test.cpp  fast_update_test.cpp  graph_lattice_test.cpp  graph_lattice_test.h5  honeycomb_test.cpp  ipr_test.cpp  jackknife_test.cpp  lattice_test.cpp  lattice_traits_test.cpp  mc_test01.cpp  polarized_test.cpp  saveload_test.cpp  statistics_test.cpp  stiffness_test.cpp  triqs_extra_test.cpp
